--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES6",
+        "allowJs": true,
+        "checkJs": false,
         "moduleResolution": "node",
         "strict": true,
         "paths": {
